@@ -7,6 +7,7 @@ require 'mini_profiler/sql_timer_struct'
 require 'mini_profiler/client_timer_struct'
 require 'mini_profiler/request_timer_struct'
 require 'mini_profiler/storage/abstract_store'
+require 'mini_profiler/storage/memcache_store'
 require 'mini_profiler/storage/memory_store'
 require 'mini_profiler/storage/redis_store'
 require 'mini_profiler/storage/file_store'
@@ -209,12 +210,7 @@ module Rack
       end
 
       if query_string =~ /pp=profile-gc/
-        begin 
-          return profile_gc(env)
-        rescue => err
-          p err
-          p err.backtrace
-        end
+        return profile_gc(env)
       end
 
       MiniProfiler.create_current(env, @config)
@@ -477,7 +473,7 @@ ObjectSpace stats:
 String stats:
 ------------\n"
 
-      r.to_a.sort{|x,y| y[1] <=> x[1] }.take(200).each do |string,count|
+      r.to_a.sort{|x,y| y[1] <=> x[1] }.take(1000).each do |string,count|
         body << "#{count} : #{string}\n"
       end
 
