@@ -71,8 +71,16 @@ module Rack
           return self.send without_profiling, *args, &orig unless Rack::MiniProfiler.current
 
           name = default_name 
-          name = blk.bind(self).call(*args) if blk
-          
+          if blk
+            name =
+              if respond_to?(:instance_exec)
+                instance_exec(*args, &blk)
+              else
+                # deprecated in Rails 4.x
+                blk.bind(self).call(*args)
+              end
+          end
+
           parent_timer = Rack::MiniProfiler.current.current_timer
           page_struct = Rack::MiniProfiler.current.page_struct
           result = nil
