@@ -1,6 +1,6 @@
 require 'mini_profiler/profiler'
 require 'patches/sql_patches'
 
-if defined?(::Rails) && ::Rails::VERSION::MAJOR.to_i == 3
+if defined?(::Rails) && ::Rails::VERSION::MAJOR.to_i >= 3
   require 'mini_profiler_rails/railtie'
 end
