@@ -2,14 +2,14 @@ require 'spec_helper'
 require 'rack-mini-profiler'
 require 'mini_profiler/page_timer_struct'
 require 'mini_profiler/storage/abstract_store'
-require 'mini_profiler/storage/redis_store'
+require 'mini_profiler/storage/memcache_store'
 
-describe Rack::MiniProfiler::RedisStore do
+describe Rack::MiniProfiler::MemcacheStore do
 
   context 'page struct' do
 
     before do
-      @store = Rack::MiniProfiler::RedisStore.new(nil)
+      @store = Rack::MiniProfiler::MemcacheStore.new
     end
 
     describe 'storage' do
@@ -27,7 +27,9 @@ describe Rack::MiniProfiler::RedisStore do
       it 'can list unviewed items for a user' do
         @store.set_unviewed('a', 'XYZ')
         @store.set_unviewed('a', 'ABC')
-        @store.get_unviewed_ids('a').should == ['XYZ', 'ABC']
+        @store.get_unviewed_ids('a').length.should == 2
+        @store.get_unviewed_ids('a').include?('XYZ').should be_true
+        @store.get_unviewed_ids('a').include?('ABC').should be_true
       end
 
       it 'can set an item to viewed once it is unviewed' do
